# OpenVinoCrash

./: CMakeLists.txt  README.md
cmake/: FindOpenVINO.cmake  OpenVINOBundle.cmake
src/: main.cpp  win.cpp  win.h
src/sample/: sample.cpp  sample.h
src/sample/common/format_reader/: CMakeLists.txt
src/sample/common/utils/: CMakeLists.txt
support/: AppxManifest.xml.in  version.rc.in
support/appx/: resources.pri
support/model/googlenet-v1/FP32/: googlenet-v1.mapping  googlenet-v1.xml
support/sign/: DEBUG_APP_SIGN_ONLY.pfx
